@@ -73,6 +73,9 @@ Minor changes:
    Javelin and [GM]. [MG]
  * Translation updates and messages fixes by Stoko.
  * Help fixes by Todd@M*U*S*H, Steve Varley and others. [MG]
+ * @message now takes a /silent and /noisy switch, the same as @pemit, with
+   the default controlled by the silent_pemit @config option. message()
+   is now silent, like pemit(). Suggested by Padraic. [MG]
 
 Fixes:
  * When regexp matching an ansi'd string, named captures weren't set
